<resources>
    <string name="app_name">SmartMobileProftaakAndroid</string>
    <string-array name="reply_choices">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="security">Beveiliging</string>
    <string name="login">Login</string>
    <string name="settings">Instellingen</string>
    <string name="connect_device">Apparaat koppelen</string>
    <string name="colors">Kleuren</string>
    <string name="color_secured">Kleur indien de telefoon beveiligd is.</string>
    <string name="color_unsecured">Kleur indien de telefoon niet beveiligd is.</string>
    <string name="reset_colors_to_default">Zet kleuren terug naar standaard</string>
    <string name="back">Terug</string>
</resources>
